--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,33 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Charity App
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-icon name="ios-bonfire"></ion-icon>
+  <ion-list inset>
+
+      <ion-item>
+        <ion-label floating stacked>Email</ion-label>
+        <ion-input type="text" value="" placeholder=""></ion-input>
+      </ion-item>
+    
+      <ion-item>
+        <ion-label floating stacked>Password</ion-label>
+        <ion-input type="password" placeholder=""></ion-input>
+      </ion-item>
+    
+    </ion-list>
+  <button ion-button (click)="navigateToLogin()" outline block large>
+    Login
+    <ion-icon name="md-arrow-dropright-circle" style="padding-left: 3px;"></ion-icon>
+  </button>
+  <button ion-button color="light" outline block>
+    Register
+    <ion-icon name="md-arrow-dropright-circle" style="padding-left: 3px;"></ion-icon>
+  </button>
+
 </ion-content>
